# ANPR

./: .gitignore  README.md  pyproject.toml  setup.py
outputs/: tests_2024-12-23_19-54-53.csv  tests_2024-12-23_19-54-53_interpolated.csv
src/anpr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/anpr/core/: config.py  main.py
src/anpr/core/utils/: data_augmentation.py  utils.py  visualize.py
tests/: test_utils.py
