[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anpr"
version = "0.1.0"
description = "Automatic Number Plate Recognition in Real-Time"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ultralytics==8.0.114",
    "opencv-python==4.7.0.72",
    "numpy==1.24.3",
    "easyocr==1.7.0",
    "filterpy==1.4.5",
    "pandas==2.0.2",
    "scipy==1.10.1",
    "matplotlib==3.7.1",
    "seaborn==0.12.2"
]

[project.optional-dependencies]
dev = [
    "pytest==7.3.1",
    "pytest-cov==4.0.0",
    "black==23.3.0",
    "flake8==6.0.0",
    "mypy==1.3.0"
]

[project.scripts]
anpr = "anpr.core.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=anpr"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
